--- a/Latin-Vocab-Shadcn/package.json
+++ b/Latin-Vocab-Shadcn/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "latin-vocab-shadcn",
+  "name": "latin-vocab-shadcn-fixed",
   "version": "1.0.0",
-  "description": "Latin vocabulary learning app with Shadcn UI",
-  "main": "server.js",
+  "description": "Latin vocabulary learning app with Shadcn UI - Fixed for Vercel",
   "scripts": {
+    "dev": "vercel dev",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo 'No build step required for serverless deployment'"
   },
   "keywords": [
     "latin",
     "vocabulary",
     "learning",
     "shadcn",
-    "ui"
+    "ui",
+    "vercel"
   ],
   "author": "",
   "license": "ISC",
@@ -27,9 +27,14 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
+    "@vercel/node": "^3.0.7",
     "autoprefixer": "^10.4.16",
+    "nodemon": "^3.0.2",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "vercel": "^32.4.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
