--- a/Latin-Vocab-Shadcn/package.json
+++ b/Latin-Vocab-Shadcn/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "latin-vocab-shadcn-fixed",
+  "name": "latin-vocab-shadcn",
   "version": "1.0.0",
-  "description": "Latin vocabulary learning app with Shadcn UI - Fixed for Vercel",
+  "description": "Latin vocabulary learning app with Shadcn UI",
+  "main": "server.js",
   "scripts": {
-    "dev": "vercel dev",
     "start": "node server.js",
-    "build": "echo 'No build step required for serverless deployment'"
+    "dev": "nodemon server.js",
+    "build": "echo 'Build completed'",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "latin",
     "vocabulary",
     "learning",
     "shadcn",
-    "ui",
-    "vercel"
+    "ui"
   ],
   "author": "",
   "license": "ISC",
@@ -21,20 +22,16 @@
     "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lucide-react": "^0.263.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@vercel/node": "^3.0.7",
-    "autoprefixer": "^10.4.16",
     "nodemon": "^3.0.2",
+    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "vercel": "^32.4.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "tailwindcss": "^3.4.0"
   }
 }
