--- a/Latin-Vocab-Shadcn/vercel.json
+++ b/Latin-Vocab-Shadcn/vercel.json
@@ -1,31 +1,9 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
-    }
+    { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/api/vocabulary/chapters/(?<chapterNumber>[^/]+)",
-      "dest": "/api/vocabulary/chapters/[chapterNumber].js?chapterNumber=$chapterNumber"
-    },
-    {
-      "src": "/api/users/(?<username>[^/]+)/progress",
-      "dest": "/api/users/[username]/progress.js?username=$username"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
+    { "src": "/(.*)", "dest": "/server.js" }
   ]
 }
