--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,27 @@
 {
-  "version": 2,
+  // "builds" tells Vercel how to build each part:
   "builds": [
-    { "src": "Latin-Vocab-Shadcn/server.js", "use": "@vercel/node" }
+    // Build and serve index.html from the root:
+    { "src": "index.html", "use": "@vercel/static" },
+
+    // If Latin-Vocab-Shadcn is a Next.js project (has package.json + next.config.js):
+    {
+      "src": "Latin-Vocab-Shadcn/package.json",
+      "use": "@vercel/next"
+    }
+
+    // Or if it’s just static HTML/JS/CSS, use:
+    // { "src": "Latin-Vocab-Shadcn/**", "use": "@vercel/static" }
   ],
+  // "routes" tells Vercel which requests map to which build:
   "routes": [
-    { "src": "/(.*)", "dest": "/Latin-Vocab-Shadcn/server.js" }
+    // Serve the root index.html at "/"
+    { "src": "^/$", "dest": "index.html" },
+
+    // Route anything under /Latin-Vocab-Shadcn to that subfolder build:
+    {
+      "src": "^/Latin-Vocab-Shadcn/(.*)$",
+      "dest": "Latin-Vocab-Shadcn/$1"
+    }
   ]
 }
