--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "builds": [
     { "src": "index.html", "use": "@vercel/static" },
     { "src": "js/**", "use": "@vercel/static" },
@@ -7,9 +8,15 @@
     { "src": "Latin-Vocab-Shadcn/server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "^/$", "dest": "/index.html" },
-    { "src": "^/Latin-Vocab-Shadcn(/.*)?$", "dest": "/Latin-Vocab-Shadcn/server.js" },
-    { "src": "^/Latin-Vocab-Shadcn/public/(.*)$", "dest": "/Latin-Vocab-Shadcn/public/$1" },
-    { "src": "/(.+)\\.(js|css|png|jpg|svg|ico)$", "dest": "/$1.$2" }
-  ]
+    { "src": "/Latin-Vocab-Shadcn/api/(.*)", "dest": "/Latin-Vocab-Shadcn/server.js" },
+    { "src": "/Latin-Vocab-Shadcn/(.*)", "dest": "/Latin-Vocab-Shadcn/server.js" },
+    { "src": "/favicon.ico", "dest": "/favicon.ico" },
+    { "src": "/(js|css)/(.*)", "dest": "/$1/$2" },
+    { "src": "/icon.png", "dest": "/icon.png" },
+    { "src": "/$", "dest": "/index.html" },
+    { "src": "/(.*)", "dest": "/$1" }
+  ],
+  "env": {
+    "VERCEL": "true"
+  }
 }
