--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
     { "src": "icon.png", "use": "@vercel/static" },
     { "src": "ORT/**", "use": "@vercel/static" },
     { "src": "Latin-Vocab-Shadcn/public/**", "use": "@vercel/static" },
+    { "src": "Latin-Vocab-Shadcn/*.json", "use": "@vercel/static" },
     { "src": "Latin-Vocab-Shadcn/server.js", "use": "@vercel/node" }
   ],
   "routes": [
